# arboreto

./: .gitignore  noxfile.py  pyproject.toml
src/arboreto/: __init__.py  _docs.py  algo.py  core.py  utils.py
